--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>魔力地图,Magic Map</title>
 </head>
 <body>
-    魔力地图,Magic Map
+    魔力地图,Magic Map！！ <span th:text="${name}"></span>
 </body>
 </html>
