--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -1,70 +1,148 @@
-<!DOCTYPE html>  
+<!DOCTYPE html>
 <html>
-<head>  
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />  
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />  
-<title>Hello, World</title>  
-<style type="text/css">  
-html{height:100%}  
-body{height:100%;margin:0px;padding:0px}  
-#container{height:100%}  
-</style>  
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=8Lrjtbq9AVIkXQGyI495DhPV1TfuKNtY">
-//v3.0版本的引用方式：src="http://api.map.baidu.com/api?v=3.0&ak=您的密钥"
-</script>
+<head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Hello, World</title>
+    <style type="text/css">
+        html{height:100%}
+        body{height:100%;margin:0px;padding:0px}
+        #container{height:100%}
+    </style>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=8Lrjtbq9AVIkXQGyI495DhPV1TfuKNtY">
+        //v3.0版本的引用方式：src="http://api.map.baidu.com/api?v=3.0&ak=您的密钥"
+    </script>
 </head>
 
 <body>
-<div id="container"></div> 
+<input id="searchText" type="text" name="searchText"></input>
+<input type="button" id = "searchButton" name="searchButton" value="查询"/>
+<input type="button" id = "currentLocaltion" name="currentLocaltionButton" value="查询"/>
+<div id="container"></div>
 <script type="text/javascript">
-var map = new BMap.Map("container");
-// 创建地图实例  
-var point = new BMap.Point(114.30, 30.60);
-// 创建点坐标  
-map.centerAndZoom(point, 15);
-// 初始化地图，设置中心点坐标和地图级别  
-map.enableScrollWheelZoom(true); //开启鼠标滚轮缩放
-map.addControl(new BMap.NavigationControl({enableGeolocation:false})); //比例尺控件
-map.addControl(new BMap.ScaleControl({anchor: BMAP_ANCHOR_BOTTOM_LEFT})); //左下角
-map.addControl(new BMap.OverviewMapControl());
-map.addControl(new BMap.MapTypeControl());
-map.setCurrentCity("武汉"); // 仅当设置城市信息时，MapTypeControl 的切换功能才能可用
+    var map = new BMap.Map("container");
+    // 创建地图实例
+    var point = new BMap.Point(111.2888001000,30.7081000101);
+    // 创建点坐标
+    map.centerAndZoom(point, 18);
+    // 初始化地图，设置中心点坐标和地图级别
+    map.enableScrollWheelZoom(true); //开启鼠标滚轮缩放
+    map.addControl(new BMap.NavigationControl({enableGeolocation:false})); //比例尺控件
+    map.addControl(new BMap.ScaleControl({anchor: BMAP_ANCHOR_BOTTOM_LEFT})); //左下角
+    map.addControl(new BMap.OverviewMapControl());
+    //map.addControl(new BMap.MapTypeControl());
+    //map.setCurrentCity("武汉"); // 仅当设置城市信息时，MapTypeControl 的切换功能才能可用
+
+    var currentLocaltionButton = document.getElementById("currentLocaltion");
+    currentLocaltionButton.onclick = function(){
+        var geolocation = new BMap.Geolocation();
+        geolocation.getCurrentPosition(function(r){
+            if(this.getStatus() == 0){
+                var mk = new BMap.Marker(r.point);
+                map.addOverlay(mk);
+                map.panTo(r.point);
+                //alert('您的位置：'+r.point.lng+','+r.point.lat);
+            }
+            else {
+                alert('failed'+this.getStatus());
+            }
+        },{enableHighAccuracy: true})
+    }
+
+    var searchElement = document.getElementById("searchButton");
+    searchElement.onclick = function(){
+        map.clearOverlays();
+
+        var searchText = document.getElementById("searchText");
+
+        var local = new BMap.LocalSearch(map,{
+            renderOptions: {
+                map: map,
+                autoViewport: true,
+                selectFirstResult: false,
+                panel: "results"
+            },
+            pageCapacity: 8
+        });
+        local.search(searchText.value);
+    }
 
 
-function drawRegion(map,regionList){
-	var regionPoint;
-	var textLabel;
-	for(var i=0;i<regionList.length;i++){
-		regionPoint = new BMap.Point(regionList[i].baiduMapLongtitue,
-		regionList[i].baiduMapLatitude);
-		var textContent = '<p style="margin-top: 20px;pointer-events: none">'
-		+ regionList[i].cn_name + '</p>' + '<p style="pointer-events: none">'
-		+'Sign!</p>';
-		
-		textLabel = new BMap.Label(textContent,{
-			position: regionPoint,  //标签位置
-			offset: new BMap.Size(-40,20)  //文本偏移量
-		})
-		
-		textLabel.setStyle({
-			height: '78px',
-			width: '78px',
-			color: '#fff',
-			backgroundColor: '&#0054a5',
-			border: '0px solod rgb(255,0,0)',
-			borderRadius: "50%",
-			display: 'inline',
-			fontWeight: 'bold',
-			lineHeight: 'normal',
-			textAlign: 'center',
-			opacity: '0.8',
-			zIndex: 2,
-			overflow: 'hidden'
-		});
-		
-		map.addOverlay(textLabel);  //将标签画在地图上
-	}
-}
+    function drawRegionTest(map){
+        var regionPoint;
+        var textLabel;
+
+        regionPoint = new BMap.Point(111.2888001000,
+            30.7081000101);
+        var textContent = '<p style="margin-top: 20px;pointer-events: none">'
+            + 123123 + '</p>' + '<p style="pointer-events: none">'
+            +'Sign!</p>';
+
+        textLabel = new BMap.Label(textContent,{
+            position: regionPoint,  //标签位置
+            offset: new BMap.Size(-40,20)  //文本偏移量
+        })
+
+        textLabel.setStyle({
+            height: '78px',
+            width: '78px',
+            color: '#fff',
+            backgroundColor: '&#0054a5',
+            border: '0px solod rgb(255,0,0)',
+            borderRadius: "50%",
+            display: 'inline',
+            fontWeight: 'bold',
+            lineHeight: 'normal',
+            textAlign: 'center',
+            opacity: '0.8',
+            zIndex: 2,
+            overflow: 'hidden'
+        });
+
+        map.addOverlay(textLabel);  //将标签画在地图上
+
+    }
+
+    drawRegionTest(map);
+
+
+
+    function drawRegion(map,regionList){
+        var regionPoint;
+        var textLabel;
+        for(var i=0;i<regionList.length;i++){
+            regionPoint = new BMap.Point(regionList[i].baiduMapLongtitue,
+                regionList[i].baiduMapLatitude);
+            var textContent = '<p style="margin-top: 20px;pointer-events: none">'
+                + regionList[i].cn_name + '</p>' + '<p style="pointer-events: none">'
+                +'Sign!</p>';
+
+            textLabel = new BMap.Label(textContent,{
+                position: regionPoint,  //标签位置
+                offset: new BMap.Size(-40,20)  //文本偏移量
+            })
+
+            textLabel.setStyle({
+                height: '78px',
+                width: '78px',
+                color: '#fff',
+                backgroundColor: '&#0054a5',
+                border: '0px solod rgb(255,0,0)',
+                borderRadius: "50%",
+                display: 'inline',
+                fontWeight: 'bold',
+                lineHeight: 'normal',
+                textAlign: 'center',
+                opacity: '0.8',
+                zIndex: 2,
+                overflow: 'hidden'
+            });
+
+            map.addOverlay(textLabel);  //将标签画在地图上
+        }
+    }
+
+
 </script>
 </body>
 </html>
