--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -32,9 +32,9 @@
 <input type="button" id="searchButton" name="searchButton" value="查询"/>
 <input type="button" id="currentLocaltion" name="currentLocaltionButton" value="当前位置"/>
 <input type="button" id="interestingSearch" name="interestingSearchButton" value="某个城市特定类型的地点"/>
-<input id="cityText" type="text" name="cityText"></input>
 <span> ———</span>
 <input type="button" id="magicLocation" name="magicLocation" value="显示上传的地点"/>
+<a href="/user/hello"> hello登录</a>
 <div id="container"></div>
 <script type="text/javascript">
     var map = new BMap.Map("container");
